Fixed context menu for containers rendered in windows + z-index on context menus.

--- a/src/ui-style/contextmenu.css
+++ b/src/ui-style/contextmenu.css
@@ -1,6 +1,6 @@
 #contextmenu {
   position: fixed;
-  z-index: 10;
+  z-index: 300;
   display: none;
   padding: 0px;
   min-width: 100px;
